# EBR-WSI-Analysis

./: .gitignore  README.md  REPORT_Q3_EBR.md  report_integrated_251006.md
reports/: week1_report.md  week2_report.md  week3_report.md  week4_report.md  week5_report.md  week6_report.md  week7_report.md
week1-openslide/src/: main.py
week2-tiatoolbox-basics/: pyproject.toml
week2-tiatoolbox-basics/src/: week2_resolution_comparison.py  week2_tissue_masking.py  week2_wsi_reading.py
week3-docker/myscripts/: generate_thumbnail.py  multi_resolution.py
week4-model-inference/: process_all_wsi.sh
week4-model-inference/myscripts/: patch_prediction.py  visualize_wsi_prediction.py
week5-stain-normalization/: process_stain_norm.sh
week5-stain-normalization/myscripts/: stain_normalization.py
week6-slide-graph/: process_feature_extraction.sh
week6-slide-graph/myscripts/: analyze_graph_features.py  extract_features.py
week7-slide-graph/: process_boundaries.sh  process_build_graph.sh  process_centrality.sh  process_communities.sh  process_visualization.sh
week7-slide-graph/myscripts/: analyze_boundaries.py  build_graph.py  compute_centrality.py  detect_communities.py  visualize_graph.py
week7-slide-graph/results/CMU-1-Small-Region/: boundary_statistics.txt  centrality_statistics.txt  community_statistics.txt  graph.pkl  graph_statistics.txt
week7-slide-graph/results/TEST_sample1/: boundary_statistics.txt  centrality_statistics.txt  community_statistics.txt  graph.pkl  graph_statistics.txt
week7-slide-graph/results/TEST_sample2/: boundary_statistics.txt  (+4 more)
(+4 files in other folders)
