[project]
name = "wsi-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "openslide-python>=1.4.2",
    "pillow>=11.3.0",
    "shapely>=2.0.0",
    "tiatoolbox>=1.3.0",
    "tifffile>=2025.9.30",
]
